# mimophys

./: README.md  pyproject.toml
examples/: full_duplex_sample.py  getting_started.ipynb
src/mimophys.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mimophys/channels/: awgn.py  los.py  ray_cluster.py
src/mimophys/devices/: antenna_array.py
src/mimophys/plotting/: plot_arrays.py
src/mimophys/utils/: geometry.py
src/mimopy/: __init__.py  network.py
src/mimopy/channels/: __init__.py  awgn.py  los.py  ray_cluster.py  rayleigh.py  rician.py  spherical_wave.py
src/mimopy/channels/path_loss/: __init__.py  free_space.py  path_loss.py
src/mimopy/devices/: __init__.py  antenna_array.py
