[project]
name = "mimophys"
version = "0.1.0"
description = "A Python library for MIMO systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.0",
]
authors=[
    {name="Samuel Li", email="samuel.li@ucla.edu"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

license = "MIT"
lisence-file = "LICENSE"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"